# newapi-ai-check-in

./: .dockerignore  .env.control-plane.example  .env.github-actions.example  .gitignore  AGENTS.md  Dockerfile  README.md  checkin.py  control_plane_main.py  docker-compose.yml  linuxdo_read_posts.py  pyproject.toml  secret-json-generator.html  sign_in_with_github.py  sign_in_with_linuxdo.py
.github/workflows/: ci.yml
checkin_996/: main.py
checkin_qaq_al/: main.py
control_plane/: __init__.py  models.py  security.py  settings.py  task_center_models.py
control_plane/api/: app.py
control_plane/executors/: __init__.py  checkin_996.py  checkin_qaq_al.py  common.py  linuxdo_read.py  main_checkin.py  main_checkin_task_center.py
control_plane/services/: app_state.py  job_service.py  legacy_oauth_executor.py  newapi_checkin_service.py  newapi_client.py  scheduler_service.py  task_center_executor.py  task_center_import.py  task_center_service.py  task_runtime.py
control_plane/storage/: base.py  factory.py  memory.py  sqlite.py
control_plane/utils/: env_scope.py  log_capture.py
docs/superpowers/: README.md
scripts/: start-stack.sh
tests/: test_control_plane_api.py  test_control_plane_storage.py  test_job_service.py  test_legacy_oauth_executor.py  test_newapi_checkin_service.py  test_newapi_client.py  test_notify.py  test_repository_hygiene.py  test_superpowers_workflow.py  test_task_center_executor.py  test_task_center_service.py
utils/: config.py  get_cdk.py  notify.py
web/: app.vue  nuxt.config.ts  package-lock.json  package.json  playwright.config.ts
(+89 files in other folders)
